admin form to edit/add users

--- a/admin/theme.properties
+++ b/admin/theme.properties
@@ -2,4 +2,5 @@ parent=keycloak
 import=common/keycloak
 
 styles=css/styles.css css/admin.css
+scripts=js/membership-date.js js/username.js
 locales=fr
