--- a/admin/theme.properties
+++ b/admin/theme.properties
@@ -2,5 +2,5 @@ parent=keycloak
 import=common/keycloak
 
 styles=css/styles.css css/admin.css
-scripts=js/membership-date.js js/username.js
+scripts=js/membership-date.js js/username.js js/co-adherent.js js/select-co-adh.js
 locales=fr
